static/static.css
/* ... */
.hljs-built_in,
.hljs-deletion {
  color: #dc322f;
}.hljs-formula {
  background: #eee8d5;
}.hljs-emphasis {
  font-style: italic;
}.hljs-strong {
  font-weight: bold;
}


[data-tiddler-title="The Pickies Charter"] .tc-title {
font-family: "Zapfino", "Snell Roundhand", "Georgia", "Times New Roman", -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
color: black;
}
[data-tiddler-title="The Pickies Charter"] .fancy-body {
font-family: "Palatino", "Georgia", "Times New Roman", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
font-size: 16px;
}
[data-tiddler-title="The Pickies Charter"] {
background-color: rgb(255, 252, 240);
}


.tc-subtitle {display:none;}

.tc-drop-down button[aria-label="info"],
.tc-drop-down button[aria-label="new here"],
.tc-drop-down button[aria-label="new journal here"],
.tc-drop-down button[aria-label="edit"],
.tc-drop-down button[aria-label="clone"],
.tc-drop-down button[aria-label="export tiddler"],
.tc-drop-down button[aria-label="delete"],
.tc-tiddler-controls button[aria-label="info"],
.tc-tiddler-controls button[aria-label="new here"],
.tc-tiddler-controls button[aria-label="new journal here"],
.tc-tiddler-controls button[aria-label="edit"],
.tc-tiddler-controls button[aria-label="clone"],
.tc-tiddler-controls button[aria-label="export tiddler"],
.tc-tiddler-controls button[aria-label="delete"],
.tc-page-controls button[aria-label="new tiddler"],
.tc-page-controls button[aria-label="more"],
.tc-sidebar-search,
.tc-sidebar-tabs
{


}


td ul {
    margin: 5px;
    padding-left: 0px;
    list-style-type: none;
}
td ul > li:before {
  content: "–"; /* en dash */
  position: absolute;
  margin-left: -1.1em; 
}
tr .tc-reveal {
    display: contents;
}

.Federico {
    background-image: linear-gradient(to right, honeydew, honeydew, white, white, lavenderblush, lavenderblush);
    border-radius: 0px 0px 5px 0px;
}
.Myke {
    background-image: 
        linear-gradient(to bottom, transparent, transparent, transparent, transparent, transparent, transparent, transparent, rgba(255,255,255,0), white, lavenderblush, lavenderblush, white, rgba(255,255,255,0), transparent, transparent, transparent, transparent, transparent, transparent, transparent), 
        linear-gradient(to right,transparent, transparent,  transparent, transparent, transparent, transparent, transparent, rgba(255,255,255,0), white, lavenderblush, lavenderblush, white, rgba(255,255,255,0), transparent, transparent, transparent, transparent, transparent, transparent, transparent), 
        linear-gradient(to bottom right, transparent, transparent, transparent, transparent, transparent, transparent, transparent, rgba(255,255,255,0), white, lavenderblush, white, white, rgba(255,255,255,0), transparent, transparent, transparent, transparent, transparent, transparent, transparent), 
        linear-gradient(to top right, transparent, transparent, transparent, transparent, transparent, transparent, transparent, rgba(255,255,255,0), white, lavenderblush, white, white, rgba(255,255,255,0), transparent, transparent, transparent, transparent, transparent, transparent, transparent), 
        linear-gradient(to bottom, aliceblue, aliceblue);
    border-radius: 0px 0px 5px 0px;
}
.Stephen {
    background-image: 
linear-gradient(to bottom, transparent, transparent, transparent, transparent, transparent, transparent, rgba(255, 255, 255, 0), white, lavenderblush, white, lavenderblush, white, lavenderblush),
        linear-gradient(to right, aliceblue, aliceblue, rgba(240, 248, 255, 0), transparent), 
        linear-gradient(to bottom, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush);

    old-background-image: conic-gradient(transparent, transparent, transparent, transparent, transparent, transparent, aliceblue, aliceblue), linear-gradient(to bottom, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush, white, lavenderblush);
    border-radius: 0px 0px 5px 0px;
}
.Federico, .Myke, .Stephen {
    text-align: center;
}



.pick {
    width: 100%;
}
.score, .cellcenter {
    text-align: center; 
    vertical-align: middle;
	padding-block: 7px;
}
.score {
    border-radius: 0px 0px 0px 5px;
}
.correct {
    background-color: lightgreen;
}
.incorrect {
    background-color: lightpink;
}
.halfcorrect {
    background-color: lemonchiffon;
}
.ungraded button {
    color: #dddddd;
}
.picktable .forecast {
    box-shadow: 0px 0px 12px 12px white inset;
}
.notes-spacer {
}
.notes {
}
.picktype {
    text-align: center; 
}
.nonotes .notes, .nonotes .notes-spacer, .nopicktype .picktype,
.nohost .Federico, .nohost .Myke, .nohost .Stephen { 
display: none; 
}

.picktable th, .picktable td, .picktable {
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: none;
}
.picktable td.Myke, .picktable td.Stephen, .picktable td.Federico, .picktable td.picktype, .picktable td.pick, .picktable td.score {
    border-top: 1px solid #dddddd;
}

[data-tiddler-title="$:/Search"] input[type="search"] {
    width: 75%;
}

.tc-tags-wrapper {
    margin: 4px 0 5px 0 !important;
}

